platform/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pub-in-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pub-in-web
  template:
    metadata:
      labels:
        app: pub-in-web
    spec:
      containers:
        - name: nginx
          image: rodrigodiez/pub-in:${CIRCLE_SHA1}
          ports:
            - containerPort: 8080
