platform/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: lab
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: lab
---
